--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
-springdoc.swagger-ui.path=/api-docs
+springdoc.swagger-ui.path=/api-ui
+springdoc.api-docs.path=/api-docs
